unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/BE_Edit_Lock__c.field-meta.xml
<CustomField>
    <fullName>BE_Edit_Lock__c</fullName>
    <formula>pse__Billing_Event__r.Edit_Lock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BE Edit Lock</label>
    <type>Text</type>
</CustomField>