unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/Expense_SKU__c.field-meta.xml
<CustomField>
    <fullName>Expense_SKU__c</fullName>
    <description>7/2 M.Kim: Reached max number of object references on BEI object - deleting field in order to create custom field for PO#.
Anticipating that field is no longer needed since Milestone object will be used to capture SKU.</description>
    <formula>pse__Expense__r.pse__Assignment__r.Services_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense SKU</label>
    <type>Text</type>
</CustomField>