unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/Invoice_Method__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Method__c</fullName>
    <formula>TEXT(pse__Billing_Event__r.Invoice_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Method</label>
    <type>Text</type>
</CustomField>