unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <formula>pse__Timecard_Split__r.pse__Timecard_Header__r.pse__Milestone__r.Name</formula>
    <inlineHelpText>additional Milestone field - created by Mel. OOB one doesn't populate Milestone related to TC</inlineHelpText>
    <label>Milestone</label>
    <type>Text</type>
</CustomField>