unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/Oracle_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Invoice_Number__c</fullName>
    <formula>pse__Billing_Event__r.pse__Invoice_Number__c</formula>
    <inlineHelpText>Invoice Number from the Billing Event record</inlineHelpText>
    <label>Oracle Invoice Number</label>
    <type>Text</type>
</CustomField>