unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/PONumber__c.field-meta.xml
<CustomField>
    <fullName>PONumber__c</fullName>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>