unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/Rev_Rec_Method__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Method__c</fullName>
    <description>Refactored the formula field to flow</description>
    <label>Rev Rec Method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>