unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/Rev_Rec_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Trigger__c</fullName>
    <formula>pse__Milestone__r.Rev_Rec_Trigger_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rev Rec Trigger</label>
    <type>Text</type>
</CustomField>