unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/Revenue_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Expiration__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Milestone__r.Revenue_Expiration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Expiration</label>
    <type>Text</type>
</CustomField>