unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <description>Sales Order Number from the Project.  Refactored from a formula field and will populate through a Flow.</description>
    <label>Sales Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>