unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>CASE(TEXT(pse__Category__c), "Expense", Expense_SKU__c,
"Timecard", Timecard_SKU__c,
"")</description>
    <formula>IF(ISPICKVAL(pse__Category__c, "Timecard") &amp;&amp; ISBLANK(pse__Timecard_Split__r.pse__Timecard_Header__r.pse__Milestone__c), pse__Timecard_Split__r.pse__Assignment__r.Services_Product__r.Name,
IF(ISPICKVAL(pse__Category__c, "Timecard") &amp;&amp; NOT(ISBLANK(pse__Timecard_Split__r.pse__Timecard_Header__r.pse__Milestone__c)), pse__Timecard_Split__r.Services_Product__c,
IF(ISPICKVAL(pse__Category__c, "Expense") &amp;&amp; ISBLANK(pse__Expense__r.pse__Milestone__c), pse__Expense__r.pse__Assignment__r.Services_Product__r.Name,
IF(ISPICKVAL(pse__Category__c, "Expense") &amp;&amp; NOT(ISBLANK(pse__Expense__r.pse__Milestone__c)), pse__Expense__r.Services_Product__c,
IF(ISPICKVAL(pse__Category__c, "Milestone"), pse__Milestone__r.Product_Name__r.Name,
IF(ISPICKVAL(pse__Category__c, "Miscellaneous Adjustment"), TEXT(pse__Miscellaneous_Adjustment__r.Services_Product__r.Product_Line__c),
"Missing Information"))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU</label>
    <type>Text</type>
</CustomField>