unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/SKU_Status__c.field-meta.xml
<CustomField>
    <fullName>SKU_Status__c</fullName>
    <formula>TEXT(pse__Timecard_Split__r.pse__Assignment__r.pse__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU Status</label>
    <type>Text</type>
</CustomField>