unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/Sold_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sold_Amount__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>IF(LEN(pse__Milestone__c) &gt; 0, pse__Milestone__r.Sales_Price__c,
IF(LEN(pse__Timecard_Split__c ) &gt; 0, pse__Timecard_Split__r.Sold_Billable_Amount__c,
IF(LEN(pse__Expense__c) &gt; 0, pse__Expense__r.Sold_Amount__c,
0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>