unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/Sold_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sold_Rate__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>IF(LEN(pse__Milestone__c) &gt; 0, pse__Milestone__r.Sales_Price__c,
IF(LEN(pse__Timecard_Split__c ) &gt; 0, pse__Timecard_Split__r.pse__Timecard_Header__r.Sold_Bill_Rate__c,
IF(LEN(pse__Expense__c) &gt; 0, pse__Expense__r.Sold_Rate__c,
0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>