unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/Timecard_SKU__c.field-meta.xml
<CustomField>
    <fullName>Timecard_SKU__c</fullName>
    <formula>pse__Timecard_Split__r.pse__Assignment__r.Services_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU</label>
    <type>Text</type>
</CustomField>