unpackaged/main/default/objects/pse__Billing_Event_Item__c/validationRules/Billing_Event_Item_Edit_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Event_Item_Edit_Lock</fullName>
    <active>true</active>
    <description>ENH20813</description>
    <errorConditionFormula>AND(PRIORVALUE(BE_Edit_Lock__c)='YES',

NOT(INCLUDES( $User.Special_Permissions__c , 'BE Processed Lockdown - BillingEventVR')), 

OR( 
ISCHANGED(pse__Object_Id__c),
ISCHANGED(pse__Date__c),
ISCHANGED(pse__Billing_Event__c),
ISCHANGED(pse__Project__c),
ISCHANGED(pse__Category__c),
ISCHANGED(pse__Description__c),
ISCHANGED(pse__Billing_Event_Batch__c),
ISCHANGED(pse__Quantity__c),
ISCHANGED(pse__Unit_Price__c),
ISCHANGED(pse__Amount__c),
ISCHANGED(pse__Subcategory__c)

))</errorConditionFormula>
    <errorMessage>Billing event processed. No changes allowed.</errorMessage>
</ValidationRule>