unpackaged/main/default/objects/pse__Billing_Event_Item__c/validationRules/Billing_Event_Item_Resubmit_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Event_Item_Resubmit_Lock</fullName>
    <active>true</active>
    <description>ENH21296 - STRY0022549 - Prevent PS Coordinators from modifying BE items Released/Submitted to OR for Processing.</description>
    <errorConditionFormula>AND( 
$Permission.PSA_Bypass_NA_Order_Admin_HQ_profile =FALSE, /*Allow *F5-NA Order Admin HQ profile*/
NOT(INCLUDES( $User.Special_Permissions__c , 'BE Resubmitted Lockdown - BillingEventVR')),
OR( 
ISPICKVAL(pse__Billing_Event__r.Stage__c,'Submitted to OR'), 
ISPICKVAL(pse__Billing_Event__r.Stage__c,'In Process by OR'), 
ISPICKVAL(pse__Billing_Event__r.Stage__c,'Submitted to OV'), 
ISPICKVAL(pse__Billing_Event__r.Stage__c,'In Process by OV') 
),
OR( 
ISCHANGED(  pse__Object_Id__c  ), 
ISCHANGED(  pse__Date__c  ), 
ISCHANGED(  pse__Billing_Event__c ), 
ISCHANGED(  pse__Project__c  ), 
ISCHANGED(  pse__Category__c ), 
ISCHANGED(  pse__Description__c  ), 
ISCHANGED(  pse__Billing_Event_Batch__c  ), 
ISCHANGED(  pse__Quantity__c  ), 
ISCHANGED(  pse__Unit_Price__c  ), 
ISCHANGED(  pse__Amount__c  ), 
ISCHANGED(  pse__Subcategory__c  ) 
))</errorConditionFormula>
    <errorMessage>Billing event Released/Submitted to OR. No changes allowed.</errorMessage>
</ValidationRule>